kubernetes/apps/base/todo/webapp-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-webapp
  labels:
    app.kubernetes.io/name: todo-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: todo-webapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: todo-webapp
    spec:
      automountServiceAccountToken: false
      containers:
        - name: todo-webapp
          image: ghcr.io/skwig/custom-todo:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
            limits:
              memory: 128Mi
