kubernetes/apps/base/todo/webapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todo-webapp
  labels:
    app.kubernetes.io/name: todo-webapp
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: todo-webapp
